--- a/bin/dune
+++ b/bin/dune
@@ -2,4 +2,4 @@
  (public_name tunein_tui)
  (name tunein_tui)
  (libraries tunein_tui tunein_tui_widgets 
-            cohttp-lwt-unix xmlm lwt lambda-term))
+            cohttp-lwt-unix xmlm lwt lambda-term str))
