Separated the app state logic between widgets

--- a/lib/actions/dune
+++ b/lib/actions/dune
@@ -2,5 +2,5 @@
  (name tunein_tui_actions)
  (public_name tunein_tui.actions)
  (modules actions)
- (libraries lambda-term lwt))
+ (libraries lambda-term lwt tunein_tui_widgets tunein_tui_types))
 
